@@ -1,0 +1,4 @@
+This test checks for a NULL document crash that can happen when calling XMLHttpRequest.open. If the test passes, you'll see a PASS message below.
+
+PASS: You didn't crash.
+
